[tool.poetry]
name = "infi.clickhouse_orm"
version = "2.1.1"
description = ""
authors = []

packages = [
    { include = "infi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pytz = "^2022.1"
iso8601 = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
